# painter-engine-ui-demo

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  meson.build  meson_options.txt  prepare.sh  start.sh  ui.json
designer/platform/webassembly/: PainterEngine.js  makefile
designer/project/: PainterEngine_Application.c  PainterEngine_Application.h  PainterEngine_Startup.c  PainterEngine_Startup.h
example/: find_all_c_file.sh  main.cpp  meson.build
example/platform/macos/: px_display.c  px_file.c  px_main.c
example/project/: PainterEngine_Application.c
fox-jump/platform/modules/: px_audio.h
fox-jump/platform/webassembly/: makefile
fox-jump/platform/webassembly/assets/birdbuild/: 2dx-shell.ps1  makefile.txt
fox-jump/platform/webassembly/assets/foxbuild/: 2dx-shell.ps1  makefile.txt
fox-jump/project/: PX_GameEvent.h  PX_Module_Game.c  PX_Module_Game.h  PX_Object_Bird.c  PX_Object_Bird.h  PX_Object_Cloud.c  PX_Object_Cloud.h  PX_Object_Fox.c  PX_Object_Fox.h  PX_Object_Ground.c  PX_Object_Ground.h  PX_Object_Wood.c  PX_Object_Wood.h  PainterEngine_Application.c  PainterEngine_Application.h  PainterEngine_Startup.c  PainterEngine_Startup.h
frontend/: PainterEngine.wasm  index.html
memory-debugger/: Makefile  find_all_c_file.sh  meson.build
memory-debugger/platform/webassembly/: index.html  makefile
memory-debugger/project/: PainterEngine_Application.c  PainterEngine_Application.h  PainterEngine_Startup.c  PainterEngine_Startup.h
mini-ui/: Makefile  find_all_c_file.sh  meson-cross.ini  meson.build
mini-ui/architecture/: PainterEngine_Runtime.c  PainterEngine_Runtime.h
mini-ui/core/: PX_Base64.c  PX_BaseGeo.c  PX_BaseGeo.h  PX_Bitmap.c  PX_Bitmap.h  PX_Core.h  PX_Font.c  PX_Font.h  PX_Hashmap.c  PX_Hashmap.h  PX_Keyboard.c  PX_Keyboard.h  PX_Linker.c  PX_Linker.h  PX_List.c  PX_List.h  PX_Log.c  PX_MathTable.h  PX_Memory.c  PX_Memory.h  PX_MemoryPool.c  PX_MemoryPool.h  PX_Midi.c  PX_Midi.h  PX_Quicksort.c  PX_Quicksort.h  PX_String.c  PX_String.h  PX_Surface.c  PX_Surface.h  PX_TRaw.c  PX_TRaw.h  PX_Texture.c  PX_Texture.h  PX_Typedef.c  PX_Typedef.h  PX_Vector.c  PX_Vector.h  PX_rbtree.c  PX_rbtree.h
mini-ui/kernel/: PX_CanvasVM.c  PX_CanvasVM.h  PX_Compiler.c  PX_Compiler.h  PX_Json.c  PX_Json.h  PX_Kernel.h  PX_Lexer.c  PX_Lexer.h  PX_Modbus.c  PX_Modbus.h  PX_Object.c  PX_Object.h  PX_Object_AsmDebugger.c  PX_Object_AsmDebugger.h  PX_Object_AutoText.c  PX_Object_AutoText.h  PX_Object_COMBox.c  PX_Object_COMBox.h  PX_Object_Canvas.c  PX_Object_Canvas.h  PX_Object_CheckBox.c  PX_Object_CheckBox.h  PX_Object_ColorPanel.c  PX_Object_ColorPanel.h  PX_Object_CounterDown.c  PX_Object_CounterDown.h  PX_Object_CursorButton.c  PX_Object_CursorButton.h  PX_Object_CursorSlider.c  PX_Object_CursorSlider.h  PX_Object_Designer.c  PX_Object_Designer.h  PX_Object_DesignerBox.c  PX_Object_DesignerBox.h  PX_Object_Edit.c  PX_Object_Edit.h  PX_Object_Executer.c  PX_Object_Executer.h  PX_Object_Explorer.c  (+75 more)
mini-ui/platform/modules/: px_file.h  px_request.h  px_serialport.h  px_tcp.h  px_thread.h  px_udp.h
mini-ui/platform/webassembly/: PainterEngine.html  PainterEngine.js  PainterEngine.wasm  main.c  px_file.c  px_tcp.c  px_thread.c  px_time.c  px_udp.c  px_websocket.c  px_websocket.h
mini-ui/platform/webassembly/assets/: language.json
mini-ui/project/: PainterEngine_Application.c  PainterEngine_Application.h  PainterEngine_Startup.c  PainterEngine_Startup.h
src/: hello.cpp  meson.build
tests/: meson.build
